# water

./: .dockerignore  .gitignore  Dockerfile  deploy.sh  docker-compose.yml
.github/workflows/: build-push.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  scoring.py
backend/app/services/: bacteria.py  swimguide.py  usgs.py  weather.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: GaugeSection.tsx  ScoreCard.tsx  SignalCard.tsx
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
